# src/routes/returnRoutes.js
@@ -7,5 +7,6 @@ const router = express.Router();
 
 router.get('/', returnOrderController.list);
 router.post('/', returnOrderController.create);
+router.put('/:id/items', returnOrderController.updateItems);
 
 module.exports = router;
